@@ -1,7 +1,8 @@
 package mate.academy.exception;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -14,29 +15,42 @@ public class CustomGlobalExceptionHandler {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<List<String>> handleValidationExceptions(
             MethodArgumentNotValidException ex) {
-        List<String> errors = ex.getBindingResult()
+        List<String> fieldErrors = ex.getBindingResult()
                 .getFieldErrors().stream()
                 .map(error -> error.getField() + " " + error.getDefaultMessage())
-                .collect(Collectors.toList());
-        return new ResponseEntity<>(errors, HttpStatus.BAD_REQUEST);
+                .toList();
+
+        List<String> globalErrors = ex.getBindingResult()
+                .getGlobalErrors().stream()
+                .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                .toList();
+
+        List<String> allErrors = Stream.concat(
+                fieldErrors.stream(),
+                globalErrors.stream())
+                .toList();
+
+        return new ResponseEntity<>(allErrors, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<String> handleAllExceptions(Exception ex) {
-        return new ResponseEntity<>(
-                "An unexpected error occurred", HttpStatus.INTERNAL_SERVER_ERROR);
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
     @ExceptionHandler(EntityNotFoundException.class)
     public ResponseEntity<String> handleEntityNotFoundException(EntityNotFoundException ex) {
-        return new ResponseEntity<>(
-                "Entity not found exception occurred", HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(SpecificationNotFoundException.class)
     public ResponseEntity<String> handleSpecificationNotFoundException(
             SpecificationNotFoundException ex) {
-        return new ResponseEntity<>(
-                "Specification not found exception occurred", HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(RegistrationException.class)
+    public ResponseEntity<String> handleRegistrationException(RegistrationException ex) {
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.CONFLICT);
     }
 }
